# Scraper_

./: .dockerignore  .env.example  .gitignore  .gitignore-python  docker-compose.test.yml  docker-compose.yml  package.json  phase_d.txt  phase_d_exact.txt  pnpm-lock.yaml  turbo.json  verif_seq.txt
.github/workflows/: ci.yml
apps/api/: alembic.ini  check_counts.py  main.py  package.json  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_saved_jobs_and_alerts.py  003_phase_f_ai_intelligence.py
apps/api/core/: config.py  database.py  deps.py  elasticsearch.py  es_index.py  logging.py  redis.py  security.py
apps/api/middleware/: logging.py  rate_limiter.py  request_id.py
apps/api/models/: __init__.py  base.py  company.py  crawler.py  embedding.py  job.py  saved.py  skill.py  user.py
apps/api/routers/v1/: __init__.py  alerts.py  auth.py  jobs.py  resume.py  salary.py  saved_jobs.py  search.py
apps/api/schemas/: __init__.py  company.py  job.py  resume.py  salary.py  saved.py  search.py  token.py  user.py
apps/api/scripts/: backfill_es.py  seed.py  seed_skills.py
apps/api/search/: es_sync.py  mappings.py  setup.py
apps/api/services/: embedding_service.py  es_sync.py  resume_service.py  salary_service.py  search_service.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: conftest.py  test_auth.py  test_jobs.py
apps/api/tests/unit/: test_canonical_id.py  test_schemas.py  test_security.py
apps/crawler/: package.json  pyproject.toml
apps/crawler/crawler/: celery_app.py  celery_app_additions.py  config.py
apps/crawler/crawler/adapters/: base.py  internshala.py  linkedin.py  naukri.py  registry.py  remoteok.py  wwr.py
apps/crawler/crawler/notifications/: email.py
apps/crawler/crawler/pipeline/: deduplicator.py  normalizer.py  salary_parser.py  skill_extractor.py
apps/crawler/crawler/schemas/: normalized_job.py  raw_job.py
apps/crawler/crawler/tasks/: alert_tasks.py  cleanup.py  crawl_tasks.py  discover.py  embedding_tasks.py  fetch_detail.py  health_check.py  health_tasks.py  lifecycle_tasks.py  reindex.py  resume_tasks.py  search_tasks.py  store.py
apps/crawler/templates/email/: job_alert.html
apps/crawler/tests/: test_adapters.py
apps/crawler/tests/fixtures/: remoteok_sample.json  wwr_sample.xml
apps/web/: next.config.js  package.json  sentry.edge.config.ts
apps/web/app/: layout.tsx
apps/web/app/(app)/dashboard/: DashboardShell.tsx  page.tsx
apps/web/app/(app)/jobs/[id]/: page.tsx
apps/web/app/(app)/profile/: page.tsx
apps/web/app/(app)/salaries/: page.tsx
apps/web/app/(app)/salaries/[role]/: page.tsx
apps/web/app/(app)/salaries/[role]/[city]/: page.tsx
apps/web/app/(app)/search/: page.tsx
apps/web/app/(app)/tracker/: page.tsx
apps/web/components/: QueryProvider.tsx
apps/web/components/alerts/: CreateAlertModal.tsx
apps/web/components/job/: JobCard.tsx  MatchScoreBadge.tsx
apps/web/components/jobs/: SaveJobButton.tsx
apps/web/components/profile/: ResumeUpload.tsx
apps/web/components/salary/: SalaryRangeBar.tsx
apps/web/components/search/: FilterPanel.tsx  SearchBar.tsx
apps/web/components/tracker/: KanbanBoard.tsx  KanbanCard.tsx
apps/web/components/ui/: badge.tsx  card.tsx  skeleton.tsx
apps/web/lib/: api.ts  types.ts  utils.ts
infra/docker/: api.Dockerfile  crawler.Dockerfile  web.Dockerfile
