[project]
name = "api"
version = "0.1.0"
description = "Career Intelligence Platform — FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",  # for alembic sync migrations
    # Caching + Queue
    "redis[hiredis]>=5.2.0",
    # Search
    "elasticsearch[async]==8.12.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.2",
    "authlib>=1.3.2",          # Google OAuth2
    "httpx>=0.28.0",           # OAuth2 HTTP client
    # Config
    "pydantic[email]>=2.10.0",
    "email-validator>=2.1.0",
    "pydantic-settings>=2.6.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Logging
    "structlog>=24.4.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",           # TestClient
    "testcontainers[postgres,redis]>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4",
    "types-passlib>=1.7.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "middleware",
    "models",
    "routers",
    "schemas",
    "alembic"
]
