[project]
name = "crawler"
version = "0.1.0"
description = "Career Intelligence Platform — Scrapy + Playwright Crawler Workers"
requires-python = ">=3.11"
dependencies = [
    # Task queue
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",          # Redis-backed Celery Beat scheduler
    "flower>=2.0.0",           # Celery monitoring (in separate container)
    # HTTP / scraping
    "scrapy>=2.11.0",
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "feedparser==6.0.11",
    "lxml>=5.3.0",
    # NLP / skill extraction
    "spacy>=3.7.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.110.0",
    # Config + validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "elasticsearch[async]==8.12.0",
    # Utilities
    "structlog>=24.4.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",          # retry logic
    "cachetools>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler"]
